--- a/index.html
+++ b/index.html
@@ -2,6 +2,32 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML template</title>
+  <title>The Solar System</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  
+</head>
+<body>
+
+  {logo}
+  The Solar System
+
+  [Stars]
+  [Terrestrial planets]
+  [Gas giants]
+  [Dwarf planets]
+  [Asteroids]
+  [Comets]
+
+  ---
+
+  {banner}
+  The Solar System—our home in the stars
+
+  ---
+
+  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+
+<header>
+  <h1>The Solar System</h1>
+</header>
+
+<main>
