Added images and some text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-  {logo}
-  The Solar System
-
+  <img src="images/logo.svg" alt="">
+  <h2>The Solar System
+<nav>
   [Stars]
   [Terrestrial planets]
   [Gas giants]
@@ -19,7 +19,7 @@
 
   ---
 
-  {banner}
+  <img src="images/banner.svg" alt="">
   The Solar System—our home in the stars
 
   ---
@@ -31,3 +31,6 @@
 </header>
 
 <main>
+  <p> Lorem ipsum dolor sit amet.</p>
+
+  <a
