--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 <body>
 
   <img src="images/logo.svg" alt="">
-  <h2>The Solar System
-<nav>
-  [Stars]
-  [Terrestrial planets]
-  [Gas giants]
-  [Dwarf planets]
-  [Asteroids]
-  [Comets]
+  <h2>The Solar System</h2>
 
-  ---
+<a href="https://wikipedia.org/wiki/Star">Stars</a>
+<a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial Panets</a>
+<a href="https://wikipedia.org/wiki/Gas_giant">Gas Giants</a>
+<a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf Planets</a>
+<a href="https://wikipedia.org/wiki/Asteroid">Asteroids</a>
+<a href="https://wikipedia.org/wiki/Comet">Stars</a>
+
 
   <img src="images/banner.svg" alt="">
   The Solar System—our home in the stars
 
-  ---
 
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 
