Cleaned up excess

--- a/index.html
+++ b/index.html
@@ -10,25 +10,19 @@
   <img src="images/logo.svg" alt="">
   <h2>The Solar System</h2>
 
+<nav>
 <a href="https://wikipedia.org/wiki/Star">Stars</a>
 <a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial Panets</a>
 <a href="https://wikipedia.org/wiki/Gas_giant">Gas Giants</a>
 <a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf Planets</a>
 <a href="https://wikipedia.org/wiki/Asteroid">Asteroids</a>
 <a href="https://wikipedia.org/wiki/Comet">Stars</a>
-
+</nav>
 
   <img src="images/banner.svg" alt="">
+  <main>
   The Solar System—our home in the stars
 
 
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
-
-<header>
-  <h1>The Solar System</h1>
-</header>
-
-<main>
-  <p> Lorem ipsum dolor sit amet.</p>
-
-  <a
+</main>
