--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <main>
   The Solar System—our home in the stars
 
-
+<data>
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+</data>
 </main>
