--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <nav>
 <a href="https://wikipedia.org/wiki/Star">Stars</a>
-<a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial Panets</a>
-<a href="https://wikipedia.org/wiki/Gas_giant">Gas Giants</a>
-<a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf Planets</a>
+<a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial planets</a>
+<a href="https://wikipedia.org/wiki/Gas_giant">Gas giants</a>
+<a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf planets</a>
 <a href="https://wikipedia.org/wiki/Asteroid">Asteroids</a>
-<a href="https://wikipedia.org/wiki/Comet">Stars</a>
+<a href="https://wikipedia.org/wiki/Comet">Comets</a>
 </nav>
 
   <img src="images/banner.svg" alt="">
