Added ending html and body tags

--- a/index.html
+++ b/index.html
@@ -25,3 +25,5 @@
 
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 </main>
+</body>
+</html>
