--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
   <img src="images/banner.svg" alt="">
   <main>
-The Solar System—our home in the stars
-
+    The Solar System—our home in the stars
+  </main>
+  </body>
+  <main>
+  <body>
 The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 </main>
 </body>
