--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <img src="images/banner.svg" alt="">
   <main>
     The Solar System—our home in the stars
-  </main>
+
+<p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+</main>
 </body>
- The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+
 </html>
