--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
   <img src="images/logo.svg" alt="">
+  <header>
   <h1>The Solar System</h1>
+</header>
 
   <nav>
     <a href="https://wikipedia.org/wiki/Star">Stars</a>
