--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
   <nav>
     <ul>
-    <a href="https://wikipedia.org/wiki/Star">Stars</a>
-    <a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial planets</a>
-    <a href="https://wikipedia.org/wiki/Gas_giant">Gas giants</a>
-    <a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf planets</a>
-    <a href="https://wikipedia.org/wiki/Asteroid">Asteroids</a>
-    <a href="https://wikipedia.org/wiki/Comet">Comets</a>
+    <li><a href="https://wikipedia.org/wiki/Star">Stars</a></li>
+    <li><a href="https://wikipedia.org/wiki/Terrestrial_planet">Terrestrial planets</a></li>
+    <li><a href="https://wikipedia.org/wiki/Gas_giant">Gas giants</a></li>
+    <li><a href="https://wikipedia.org/wiki/Dwarf_planet">Dwarf planets</a></li>
+    <li><a href="https://wikipedia.org/wiki/Asteroid">Asteroids</a></li>
+    <li><a href="https://wikipedia.org/wiki/Comet">Comets</a></li>
   </ul>
   </nav>
 
