--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <body>
 
   <header>
-
-      <img src="images/logo.svg" alt="">
-
-      <h1>The Solar System</h1>
+    <figure>
+      <figcaption>
+        <img src="images/logo.svg" alt="">
+      </figcaption>
+    </figure>
+    <h1>The Solar System</h1>
 
     <nav>
       <ul>
